# recipebox

./: db.sqlite3  pyproject.toml
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_auto_20200910_1923.py
recipebox/: settings.py  urls.py
templates/: author_detail.html  author_form.html  base.html  basic_form.html  home.html  index.html  login_form.html  post_detail.html  recipe_form.html  recipe_list.html  signup_form.html
